# IPG

./: .gitignore  CLAUDE.md  README.md  best-practices-roadmap.md  docker-compose.dokploy.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  main.py  pyproject.toml  requirements-dev.in  requirements-prod.in
backend/ibg/: app.py  database.py  dependencies.py  logger_config.py  settings.py
backend/ibg/api/: constants.py  middleware.py
backend/ibg/api/controllers/: achievement.py  auth.py  codenames.py  game.py  room.py  shared.py  stats.py  undercover.py  user.py
backend/ibg/api/models/: codenames.py  error.py  room.py  shared.py  stats.py  table.py
backend/ibg/api/routes/: auth.py  codenames.py  room.py  stats.py
backend/ibg/api/schemas/: auth.py  error.py
backend/ibg/socketio/: dependencies.py
backend/ibg/socketio/controllers/: codenames.py  disconnect.py  room.py  undercover_game.py
backend/ibg/socketio/models/: codenames.py  room.py  shared.py  socket.py  user.py
backend/ibg/socketio/routes/: codenames.py  room.py  shared.py  undercover.py
backend/ibg/socketio/utils/: redis_ttl.py
backend/ipg/: app.py  dependencies.py  settings.py
backend/ipg/api/: constants.py
backend/ipg/api/controllers/: achievement.py  auth.py  base_game.py  challenge.py  chat.py  codenames.py  codenames_game.py  disconnect.py  friend.py  game.py  mcqquiz_game.py  profile.py  room.py  shared.py  stats.py  undercover.py  undercover_game.py  user.py  wordquiz.py  wordquiz_game.py
backend/ipg/api/models/: chat.py  error.py  friendship.py  game.py  relationship.py  stats.py  table.py  token.py  user.py  view.py  wordquiz.py
backend/ipg/api/routes/: auth.py  challenge.py  chat.py  codenames.py  friend.py  mcqquiz.py  profile.py  room.py  stats.py  undercover.py  user.py  wordquiz.py
backend/ipg/api/schemas/: codenames.py  common.py  error.py  friend.py  profile.py  room.py  (+4 more)
backend/majlisna/: app.py  database.py  settings.py
backend/scripts/: add_hints_to_words.py  connect_players.py  fill_database.py  generate_fake_data.py
backend/scripts/seed_data/: codenames_data.py  mcqquiz_data.py  undercover_data.py  wordquiz_data.py
backend/tests/: conftest.py
backend/tests/api/: test_middleware.py
(+284 files in other folders)
